--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "enzyme": "^3.11.0",
     "history": "^5.0.0",
     "react": "^17.0.2",
     "react-block-ui": "^1.3.3",
